added debug details page
* added debug details page
* linked debug details page from chrome notification click

--- a/debugdetails.html
+++ b/debugdetails.html
@@ -11,7 +11,11 @@
             <div class="card-content">
 
               <div class="row">
-                <span class="card-title">Debug Request Details</span>
+                  <div class="col s9">
+                        <span class="card-title">Debug Request Details</span>
+                  </div>
+
+                
               </div>
               <div id="debugdetails-wrapper" style="font-size: 15px">
                 <ul id="debugdetails" class="collection"></ul>
