--- a/debug-history.html
+++ b/debug-history.html
@@ -18,7 +18,7 @@
               <div class="row" style="font-size: 11px">
                     <div class='col s2' style='width: inherit;'>Time(GMT)</div>
                     <div class='col s3'>Reference Error ID</div>
-                    <div class='col s2'>Reason for failure</div>
+                    <div class='col s2'>Reason for failure / Status</div>
                     <div class='col s2'>Error Response Code</div>
                     <div class='col s3'>Server IP</div>
               </div>
