added functionality to fetch logs
* added functionality to fetch logs from a ghost using Ghost IP and
Hostname

--- a/credential.html
+++ b/credential.html
@@ -20,8 +20,8 @@
               </div>
               <div class="row">
                 <div class="input-field col s12">
-                  <input placeholder="https://akab-xxxxx.purge.akamaiapis.net/" id="baseurl" type="text">
-                  <label for="baseurl">Base URL</label>
+                  <input placeholder="https://akab-xxxxx.purge.akamaiapis.net" id="baseurl" type="text">
+                  <label for="baseurl">Base URL (ensure you start the BaseURL with https://</label>
                 </div>
               </div>
               <div class="row">
