--- a/popup.html
+++ b/popup.html
@@ -137,7 +137,7 @@
                   <div class="row">
                     <div class="col s12">
                         <div class="input-field">
-                            <textarea id="debugurls"  placeholder="#9.01233r453ftvfer OR www.example.com"  class="materialize-textarea"></textarea>
+                            <textarea id="debugurls"  placeholder="9.01233r453ftvfer OR www.example.com"  class="materialize-textarea"></textarea>
                             <label for="debugurls">Enter Error Reference Code OR Request hostname</label>
                           </div>
                           <div class="input-field">
