--- a/credential.html
+++ b/credential.html
@@ -21,7 +21,7 @@
               <div class="row">
                 <div class="input-field col s12">
                   <input placeholder="https://akab-xxxxx.purge.akamaiapis.net" id="baseurl" type="text">
-                  <label for="baseurl">Base URL (ensure you start the BaseURL with https://</label>
+                  <label for="baseurl">Base URL (ensure you start the BaseURL with https://)</label>
                 </div>
               </div>
               <div class="row">
