--- a/popup.html
+++ b/popup.html
@@ -130,7 +130,7 @@
                   </div>
                   <div class="row">
                     <div class="col s12">
-                      <span>Allows you to fetch ghost logs for an error or a successfull request from Akamai servers. If you received an error, then simply enter the Error Reference Code. If you wish to pull logs for a succcessfull transaction, then turn on Akamai debug headers under browser settings and enter the <b>hostname</b> and the <b>Akamai server IP</b> below and click submit</span>
+                      <span>Allows you to fetch ghost logs for an error or for a successful request from Akamai servers. If you received an error, then simply enter the Error Reference Code and click submit. If you wish to pull logs for a succcessful transaction, then enter the <b>hostname</b> and the <b>Akamai server IP</b> below and click submit</span>
                      
                     </div>
                   </div>
