--- a/popup.html
+++ b/popup.html
@@ -17,7 +17,7 @@
       <div class="row">
         <div class="col s9 left">
             <h4 class="light-blue-text text-accent-3" style="padding-left:20px;"> Akamai Developer Toolkit</h4>
-           <p style="padding-left: 20px;"> <b>Disclaimer:</b> This is not an official Akamai product, please log all your issues using our feedback button on the right of this plugin | version 1.0</p>
+           <p style="padding-left: 20px;"> <b>Disclaimer:</b> This is not an official Akamai product, please log all your issues using our feedback button on the right | version 1.0</p>
         </div>
         <div class="col s2 right">
           <p></p>
