added credential type, cleaned up popup.js, credential.js, purge.js, credential type check when purge, etc

--- a/popup.html
+++ b/popup.html
@@ -35,7 +35,7 @@
                   
                   <p>Manage your API credentials and toggle between different kinds of API tokens based on the service you are trying to access </p>
                   <ul id="tokenlist" class="collection orange-text text-darken-2"></ul>
-                  <div id="apitab-nocredential" class="col s12 center-align" style="font-size: 13px;">
+                  <div id="apitab-nocredential" class="col s12 center-align" style="font-size: 13px; padding: 20px;">
                       <p>Looks like you have no API credentials configured, <a id="addnewtokenlink" href="#">click here</a> to configure one.</p>
                   </br>
                     </div>
