--- a/popup.html
+++ b/popup.html
@@ -7,6 +7,27 @@
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link href="fonts/materialicons.css" rel="stylesheet" type="text/css">
 
+    <style>
+
+			div.piez-main {
+				background: rgb(255, 255, 255);
+				font-size: 15px;
+				font-family:  system-ui, sans-serif;
+				padding: 10px;
+        width: 100%;
+				overflow: hidden;
+      }
+
+      div.piez-main p {
+        background: rgb(255, 255, 255);
+				font-size: 11px;
+				font-family:  system-ui, sans-serif;
+				padding: 0px;
+        width: 100%;
+				overflow: hidden;
+      }
+      
+		</style>
   </head>
   <body>
 
@@ -157,6 +178,44 @@
                   </div>
                 </div>
             </div>
+            <div class="card white hoverable">
+              <div class="card-content black-text">
+                <div class="row">
+                  <div class="col s12">
+                    <span class="card-title black-text">Piez <a href="#!" id="fastpurgetutorial" class="tooltipped" data-position="bottom" data-tooltip="video tutorial on how to use this section"><i class="material-icons blue-grey-text text-darken-2">play_circle_outline</i></a></span>
+                    <p>Piez displays optimizations made by Akamai Image Manager, Resource Optimizer, Push/Preconnect, and Script Manager. Once you make a selection below, please proceed to open up Chrome Dev Tools and select "Akamai Dev Tools - Piez"</p>
+                  </div>
+                  </br>
+                  </br>
+                    <div class='piez-main'>
+                      <span>Select which mode you would like Piez to operate on</span>
+                      <p>.</p>
+                      <form id='piezConfigForm' class=''>
+                        <input type="radio" name="piezRadio" id="piez-off" value="piez-off">
+                        <label for="piez-off">Disabled</label><br>
+                        <input type="radio" name="piezRadio" id="piez-im-simple" value="piez-im-simple">
+                        <label for="piez-im-simple">Image Manager (Simple)</label><br>
+                        <input type="radio" name="piezRadio" id="piez-im-advanced" value="piez-im-advanced">
+                        <label for="piez-im-advanced">Image Manager (Advanced)</label><br>
+                        <input type="radio" name="piezRadio" id="piez-a2" value="piez-a2">
+                        <label for="piez-a2">Push/Preconnect</label><br>
+                        <input type="radio" name="piezRadio" id="piez-ro-simple" value="piez-ro-simple">
+                        <label for="piez-ro-simple">Resource Optimizer (Simple)</label><br>
+                        <input type="radio" name="piezRadio" id="piez-ro-advanced" value="piez-ro-advanced">
+                        <label for="piez-ro-advanced">Resource Optimizer (Advanced)</label><br>
+                        <input type="radio" name="piezRadio" id="piez-3pm" value="piez-3pm">
+                        <label for="piez-3pm">Script Management</label><br>
+                      </form> 
+                    </div>
+
+
+               
+                </div>
+              </div>
+            </div>
+
+
+
             <div class="card grey darken-1">
               <div class="row">
                 <div class="col s12">
