--- a/credential.html
+++ b/credential.html
@@ -4,70 +4,90 @@
     <link type="text/css" rel="stylesheet" href="css/materialize.css" media="screen,projection"/>
   </head>
   <body>
-    <div class="container" style="width: 600px; margin-top: 100px;">
-			<div class="col s12 m5">
-				<div class="card">
-					<div class="card-content" style="font-size: 13px;">
-						<div class="row">
-							<span class="card-title">Adding an API Credential</span>
-						</div>
-						<div class="row">
-							<div class="input-field col s12">
-								<input placeholder="API credential for Account XXXX" id="credential_desc" type="text">
-								<label for="credential_desc">Credential Description</label>
-							</div>
-						</div>
-						<div class="row">
-							<div class="input-field col s12">
-								<input placeholder="https://akab-xxxxx.purge.akamaiapis.net" id="baseurl" type="text">
-								<label for="baseurl">Base URL (ensure you start the BaseURL with https://)</label>
-							</div>
-						</div>
-						<div class="row">
-							<div class="input-field col s12">
-								<input placeholder="akab-tk5pfdsafdasfdasd-kuzhzd22ux4bqxwm" id="accesstoken" type="text">
-								<label for="accesstoken">Access Token</label>
-							</div>
-						</div>
-						<div class="row">
-							<div class="input-field col s12">
-								<input placeholder="akab-3wemri3ntswszf72-vptl5ufdafdsfdasc" id="clienttoken" type="text">
-								<label for="clienttoken">Client Token</label>
-							</div>
-						</div>
-						<div class="row">
-							<div class="input-field col s12">
-								<input placeholder="ahlaglC90Ai0Vf8Flfdasfdafdasfdasfdasfdas9s=" id="secret" type="text">
-								<label for="secret">Secret</label>
-							</div>
+    <div class="container" style="width: 1000px; margin-top: 100px;">
+      <div class="row">
+
+        <div class="col s8">
+          <div class="card">
+            <div class="card-content" style="font-size: 13px;">
+              <span class="card-title">Adding an API Credential</span>
+              <div class="row">
+                <div class="input-field col s12">
+                  <input placeholder="API credential for Account Akamai" id="credential_desc" type="text">
+                  <label for="credential_desc">Credential Description</label>
+                </div>
+              </div>
+              <div class="row">
+                <div class="input-field col s12">
+                  <input placeholder="https://akab-xxxxx.yyyy.akamaiapis.net" id="baseurl" type="text">
+                  <label for="baseurl">Base URL (ensure you start the BaseURL with https://)</label>
+                </div>
+              </div>
+              <div class="row">
+                <div class="input-field col s12">
+                  <input placeholder="akab-tk5pfdsafdasfdasd-kuzhzd22ux4bqxwm" id="accesstoken" type="text">
+                  <label for="accesstoken">Access Token</label>
+                </div>
+              </div>
+              <div class="row">
+                <div class="input-field col s12">
+                  <input placeholder="akab-3wemri3ntswszf72-vptl5ufdafdsfdasc" id="clienttoken" type="text">
+                  <label for="clienttoken">Client Token</label>
+                </div>
+              </div>
+              <div class="row">
+                <div class="input-field col s12">
+                  <input placeholder="ahlaglC90Ai0Vf8Flfdasfdafdasfdasfdasfdas9s=" id="secret" type="text">
+                  <label for="secret">Secret</label>
+                </div>
+              </div>
+              <div class="row">
+                <div class="input-field col s12">
+                  <select id="tokentype">
+                    <option value="" disabled selected>Choose Credential Type</option>
+                    <option value="General OPEN APIs">General OPEN APIs</option>
+                    <option value="Fast Purge APIs">Fast Purge APIs</option>
+                  </select>
+                  <label>Credential Type</label>
+                </div>
+              </div>
             </div>
-            <div class="row">
-              <div class="col s12 input-field">
-                <select id="tokentype">
-                  <option value="" disabled selected>Choose Credential Type</option>
-                  <option value="General OPEN APIs">General OPEN APIs</option>
-                  <option value="Fast Purge APIs">Fast Purge APIs</option>
-                </select>
-                <label>Credential Type</label>
+            <div class="card-action">
+              <div class="row right-align">
+                <div class="col s12">
+                  <a id="submitButton" class="light-blue waves-effect waves-light btn">Save</a>
+                  <a id="clearButton" class="blue-grey waves-effect waves-light btn">Reset</a>
+                </div>
               </div>
             </div>
           </div>
-					<div class="card-action">
-						<div class="row right-align">
-							<div class="col s12">
-								<a id="submitButton" class="light-blue waves-effect waves-light btn">Save</a>
-								<a id="clearButton" class="blue-grey waves-effect waves-light btn">Reset</a>
-							</div>
-						</div>
-					</div>
+        </div>
+
+        <div class="col s4">
+          <div class="card">
+            <div class="card-content">
+              <span class="card-title">Upload a credential file</span>
+               <form action="#">
+								<div class="file-field input-field">
+									<div class="light-blue waves-effect waves-light btn">
+										<span>File</span>
+										<input type="file">
+									</div>
+									<div class="file-path-wrapper">
+										<input class="file-path validate" type="text">
+									</div>
+								</div>
+							</form>
+            </div>
+          </div>
 				</div>
-			</div>
+
+      </div> <!-- main row -->
     </div> <!-- container -->
+
     <script type="text/javascript" src="js/jquery-3.1.1.min.js"></script>
     <script type="text/javascript" src="js/materialize.min.js"></script>
     <script type="text/javascript" src="js/common.js"></script>
     <script type="text/javascript" src="js/credential.js"></script>
   </body>
 </html>
-
-
