see more btn modified

--- a/purge-history.html
+++ b/purge-history.html
@@ -2,6 +2,7 @@
   <head>
     <title>Purge History</title>
     <link type="text/css" rel="stylesheet" href="css/materialize.css" media="screen,projection"/>
+    <link type="text/css" rel="stylesheet" href="css/common.css" media="screen,projection"/>
   </head>
   <body>
     <div class="container" style="margin-top: 100px;">
