adding getting started dialog

--- a/popup.html
+++ b/popup.html
@@ -4,6 +4,7 @@
     <title>Akamai Developer Toolkit v1.0</title>
     <link type="text/css" rel="stylesheet" href="css/materialize.css" media="screen,projection"/>
     <link type="text/css" rel="stylesheet" href="css/common.css">
+    <link type="text/css" rel="stylesheet" href="js/jquery-ui.min.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link href="fonts/materialicons.css" rel="stylesheet" type="text/css">
 
@@ -248,6 +249,7 @@
     <!-- container -->
 
     <script type="text/javascript" src="js/jquery-3.1.1.min.js"></script>
+    <script type="text/javascript" src="js/jquery-ui.min.js"></script>
     <script type="text/javascript" src="js/materialize.min.js"></script>
     <script type="text/javascript" src="js/common.js"></script>
     <!-- <script type="text/javascript" src="js/core.js"></script> -->
