adding support for getting started video and update info
* show user getting started hint when installing the extension for the
first time
* show user that their extension has been updated
* version number in the extension is grabbed from the manifest
* if a new update is available locally (chrome downloads it every few
hours) then we reload the extension, since the background page is
persistent we have to do this every now and then.

--- a/popup.html
+++ b/popup.html
@@ -39,7 +39,7 @@
                   <span class="card-title light-blue-text text-accent-3"><h4 style="margin: 0px;">Akamai Developer Toolkit</h4></span>
                   <p>
                     <b>Disclaimer:</b>
-                    This is not an official Akamai product, please log all your issues using our feedback button on the right | version 1.0
+                    This is not an official Akamai product, please log all your issues using our feedback button on the right <div class="versionNumber"><b>Version:</b></div>
                   </p>
                 </div>
                 <div class="col s3 right-align">
