adding support for tweeting directly from the extension

--- a/popup.html
+++ b/popup.html
@@ -48,6 +48,8 @@
                       <i class="material-icons blue-grey-text text-darken-2">feedback</i>
                     </a>
                   </p>
+                  <br>
+                  <div class="twitter-wjs"></div>
                 </div>
               </div>
             </div>
