added warning to remove Piez from the users browser
*added code to detect if Piez is present
*if Piez is present then show warning
*within warning, get user’s consent to remove Piez
*Once user consents then go ahead and remove Piez

--- a/popup.html
+++ b/popup.html
@@ -202,8 +202,10 @@
                     <!-- </a> -->
                   </span>
                   <p>Piez displays optimizations made by Akamai Image Manager, Resource Optimizer, Push/Preconnect and Script Manager. Once you make a selection below, please proceed to open up Chrome Dev Tools and select "Akamai Dev Tools - Piez"</p>
+                  <div class="piez-detected"></div>
                 </div>
               </div>
+              
               <div class="row">
                 <div class="col s12">
                   <span><h6>Select which mode you would like Piez to operate on</h6></span>
