--- a/popup.html
+++ b/popup.html
@@ -4,7 +4,6 @@
     <title>Akamai Developer Toolkit v1.0</title>
     <link type="text/css" rel="stylesheet" href="css/materialize.css" media="screen,projection"/>
     <link type="text/css" rel="stylesheet" href="css/common.css">
-    <link type="text/css" rel="stylesheet" href="js/jquery-ui.min.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="fonts/materialicons.css"  type="text/css">
     <style>
@@ -36,24 +35,25 @@
             <div class="card-content black-text">
               <div class="row" style="margin-bottom: 0px;">
                 <div class="col s9">
-                  <span class="card-title light-blue-text text-accent-3"><h4 style="margin: 0px;">Akamai Developer Toolkit</h4></span>
+                  <span class="card-title light-blue-text text-accent-3" style="display: inline-block"><h4 style="margin: 0px;">Akamai Developer Toolkit</h4></span>
+                  <span class="versionNumber new badge orange" data-badge-caption="Version" style="margin-top: 10px; position: absolute"></span>
                   <p>
                     <b>Disclaimer:</b>
-                    This is not an official Akamai product, please log all your issues using our feedback button on the right <div class="versionNumber"><b>Version:</b></div>
+                    This is not an official Akamai product, please log all your issues using our feedback button on the right 
                   </p>
                 </div>
                 <div class="col s3 right-align">
-                  <p>
-                    <a href="#!" id="feedbackform" class="btn blue-grey lighten-5 hoverable tooltipped" data-position="bottom" data-tooltip="Provide feedback to improve the tool">
-                      <i class="material-icons blue-grey-text text-darken-2">feedback</i>
-                    </a>
-                  </p>
-                  <br>
-                  <div class="twitter-wjs"></div>
+                  <a href="#!" id="feedbackform" class="btn blue-grey lighten-5 hoverable tooltipped" data-position="bottom" data-tooltip="Provide feedback to improve the tool">
+                    <i class="material-icons blue-grey-text text-darken-2">feedback</i>
+                  </a>
+                  <div class="twitter-wjs padding-top"></div>
                 </div>
               </div>
             </div>
           </div>
+
+          <!-- Notification -->
+          <div id="notification"></div>
 
           <!-- Credential Manager -->
           <div class="card hoverable">
@@ -202,7 +202,7 @@
                     <!-- </a> -->
                   </span>
                   <p>Piez displays optimizations made by Akamai Image Manager, Resource Optimizer, Push/Preconnect and Script Manager. Once you make a selection below, please proceed to open up Chrome Dev Tools and select "Akamai Dev Tools - Piez"</p>
-                  <div class="piez-detected"></div>
+                  <div id="piez-notification"></div>
                 </div>
               </div>
               
@@ -264,7 +264,6 @@
     </div> <!-- container -->
 
     <script type="text/javascript" src="js/jquery-3.1.1.min.js"></script>
-    <script type="text/javascript" src="js/jquery-ui.min.js"></script>
     <script type="text/javascript" src="js/materialize.min.js"></script>
     <script type="text/javascript" src="js/common.js"></script>
     <script type="text/javascript" src="js/purge.js"></script>
