piez + debug header fixed

--- a/popup.html
+++ b/popup.html
@@ -128,7 +128,7 @@
                     <label>
                       OFF
                       <input id="updatetype-debugheaders" type="checkbox">
-                      <span class="lever light-blue"></span>
+                      <span class="lever"></span>
                       ON
                     </label>
                   </div>
