twitter button padding adjusted

--- a/popup.html
+++ b/popup.html
@@ -46,7 +46,7 @@
                   <a href="#!" id="feedbackform" class="btn blue-grey lighten-5 hoverable tooltipped" data-position="bottom" data-tooltip="Provide feedback to improve the tool">
                     <i class="material-icons blue-grey-text text-darken-2">feedback</i>
                   </a>
-                  <div class="twitter-wjs padding-top"></div>
+                  <div class="twitter-wjs" style="padding-top: 5px"></div>
                 </div>
               </div>
             </div>
