move credential related config to cmanager folder

--- a/cmanager/credential.html
+++ b/cmanager/credential.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>Add/Edit API Credentials</title>
-    <link type="text/css" rel="stylesheet" href="css/materialize.css" media="screen,projection"/>
+    <link type="text/css" rel="stylesheet" href="/css/materialize.css" media="screen,projection"/>
   </head>
   <body>
     <div class="container" style="width: 1000px; margin-top: 100px;">
@@ -85,9 +85,9 @@
       </div> <!-- main row -->
     </div> <!-- container -->
 
-    <script type="text/javascript" src="js/jquery-3.1.1.min.js"></script>
-    <script type="text/javascript" src="js/materialize.min.js"></script>
-    <script type="text/javascript" src="js/common.js"></script>
-    <script type="text/javascript" src="js/credential.js"></script>
+    <script type="text/javascript" src="/js/jquery-3.1.1.min.js"></script>
+    <script type="text/javascript" src="/js/materialize.min.js"></script>
+    <script type="text/javascript" src="/js/common.js"></script>
+    <script type="text/javascript" src="/cmanager/credential.js"></script>
   </body>
 </html>
