--- a/popup.html
+++ b/popup.html
@@ -266,6 +266,7 @@
     <script type="text/javascript" src="js/jquery-3.1.1.min.js"></script>
     <script type="text/javascript" src="js/materialize.min.js"></script>
     <script type="text/javascript" src="js/common.js"></script>
+    <script type="text/javascript" src="cmanager/cmanager.js"></script>
     <script type="text/javascript" src="js/purge.js"></script>
     <script type="text/javascript" src="js/popup.js"></script>
     <script type="text/javascript" src="js/debugurls.js"></script>
