clean up browser setting card and related js

--- a/popup.html
+++ b/popup.html
@@ -269,6 +269,7 @@
     <script type="text/javascript" src="js/popup.js"></script>
     <script type="text/javascript" src="cmanager/cmanager.js"></script>
     <script type="text/javascript" src="fastpurge/fastpurge.js"></script>
+    <script type="text/javascript" src="browserst/browserst.js"></script>
     <script type="text/javascript" src="debugreq/debugreq.js"></script>
     <script type="text/javascript" src="piez/piez.js"></script>
   </body>
