add encryption, piez color scheme updated

--- a/cmanager/credential.html
+++ b/cmanager/credential.html
@@ -55,7 +55,8 @@
             <div class="card-action">
               <div class="row right-align">
                 <div class="col s12">
-                  <a id="submitButton" class="light-blue waves-effect waves-light btn">Save</a>
+                  <a id="submitButton-add" class="light-blue waves-effect waves-light btn">Save &amp; Add Another</a>
+                  <a id="submitButton" class="light-blue waves-effect waves-light btn">Save &amp; Close</a>
                   <a id="clearButton" class="blue-grey waves-effect waves-light btn">Reset</a>
                 </div>
               </div>
