--- a/fastpurge/fastpurge-history.html
+++ b/fastpurge/fastpurge-history.html
@@ -3,6 +3,20 @@
     <title>Purge History</title>
     <link type="text/css" rel="stylesheet" href="/css/materialize.css" media="screen,projection"/>
     <link type="text/css" rel="stylesheet" href="/css/common.css" media="screen,projection"/>
+    <link rel="stylesheet" href="/fonts/materialicons.css"  type="text/css">
+    <link rel="stylesheet" type="text/css" href="/css/jquery.dataTables.css">
+    <style>
+      select[name='purge-table_length'] {
+        width: auto !important;
+        color: unset !important;
+      }
+      input[type='search'] {
+        width: auto !important;
+      }
+      label {
+        color: black;
+      }
+    </style>
   </head>
   <body>
     <div class="container" style="margin-top: 100px;">
@@ -16,7 +30,7 @@
               </div>
 
               <div class="row" id="historytab">
-								<table class="highlight centered" style="font-size: 14px">
+								<table id="purge-table" class="hover centered" style="font-size: 14px">
 									<thead>
 										<tr>
 											<th>Time(GMT)</th>
@@ -27,18 +41,12 @@
 											<th>Number of Purged Objects</th>
 											<th>Network</th>
 											<th>Status</th>
-											<th></th>
+											<th class="no-sort"></th>
 										</tr>
                   </thead>
                   <tbody id="historylist">
                   </tbody>
                 </table>
-              </div>
-
-              <div class="row" id="historytab-nohistory">
-                <div class="col s12 center-align" style="font-size: 13px">
-                  <p>No Purge History Available.</p>
-                </div>
               </div>
 
               <div class="row right-align">
@@ -56,7 +64,9 @@
 
     <script type="text/javascript" src="/js/jquery-3.1.1.min.js"></script>
     <script type="text/javascript" src="/js/materialize.min.js"></script>
+    <script type="text/javascript" src="/js/jquery.dataTables.js"></script>
     <script type="text/javascript" src="/js/common.js"></script>
+    <script type="text/javascript" src="/fastpurge/fastpurge-details.js"></script>
     <script type="text/javascript" src="/fastpurge/fastpurge-history.js"></script>
   </body>
 </html>
