add delete button in purge record table. purge record data structure modified

--- a/fastpurge/fastpurge-history.html
+++ b/fastpurge/fastpurge-history.html
@@ -19,7 +19,7 @@
     </style>
   </head>
   <body>
-    <div class="container" style="margin-top: 100px;">
+    <div class="container" style="margin-top: 70px; width: 80%;">
       <div class="row">
         <div class="col s12">
           <div class="card">
@@ -33,6 +33,7 @@
 								<table id="purge-table" class="hover centered" style="font-size: 14px">
 									<thead>
 										<tr>
+											<th class="no-sort"></th>
 											<th>Time(GMT)</th>
 											<th>Credential</th>
 											<th>UpdateType</th>
