encryption logic updated

--- a/fastpurge/fastpurge-history.html
+++ b/fastpurge/fastpurge-history.html
@@ -39,7 +39,7 @@
 											<th>UpdateType</th>
 											<th>PurgeType</th>
 											<th>PurgeId</th>
-											<th>Number of Purged Objects</th>
+											<th>ObjectNum</th>
 											<th>Network</th>
 											<th>Status</th>
 											<th class="no-sort"></th>
@@ -71,5 +71,3 @@
     <script type="text/javascript" src="/fastpurge/fastpurge-history.js"></script>
   </body>
 </html>
-
-
