--- a/debugreq/debugreq-history.html
+++ b/debugreq/debugreq-history.html
@@ -1,62 +1,70 @@
 <html>
   <head>
-    <title>Debug History Details</title>
+    <title>Debug Request Results</title>
     <link type="text/css" rel="stylesheet" href="/css/materialize.css" media="screen,projection"/>
+    <link type="text/css" rel="stylesheet" href="/css/common.css" media="screen,projection"/>
+    <link rel="stylesheet" href="/fonts/materialicons.css"  type="text/css">
+    <link rel="stylesheet" type="text/css" href="/css/jquery.dataTables.css">
+    <style>
+      select[name='debug-request-table_length'] {
+        width: auto !important;
+        color: unset !important;
+      }
+      input[type='search'] {
+        width: auto !important;
+      }
+      label {
+        color: black;
+      }
+    </style>
   </head>
   <body>
-    <div class="container" style="margin-top: 100px;">
-    <div class="row">
+    <div class="container" style="margin-top: 70px; width: 60%;">
+      <div class="row">
         <div class="col s12">
           <div class="card">
             <div class="card-content">
 
               <div class="row">
-                <span class="card-title">Debug History Details</span>
-              </div>
-              <div class="row">
-              <div id="debughistorytab" class="col s12">
-              <div class="row" style="font-size: 11px">
-                    <div class='col s2' style='width: inherit;'>Time(GMT)</div>
-                    <div class='col s3'>Reference Error ID / Hostname Entered</div>
-                    <div class='col s2'>Reason for failure / Status</div>
-                    <div class='col s2'>Error Response Code</div>
-                    <div class='col s3'>Server IP</div>
-              </div>
-              <ul id="debughistorylist" class="collapsible" data-collapsible="accordion"></ul>
-
-              <div class="row right-align" style="margin-bottom: 0px">
-                <div class="col s12">
-                  <a id="cleardebugHistoryButton" href="#!" class="btn blue-grey">Clear History</a>
-                </div>
-              </div>
-              </div>
-            </div>
-
-
-              <div id="debughistorytab-nohistory" class="col s12 center-align" style="font-size: 13px">
-                    <p>No Debug History Available.</p>
+                <span class="card-title">Debug Request Results</span>
               </div>
 
               <div class="row">
-                <div class="col s7 left-align">
-                  <div id="no-info-msg" style="display: none;"><p>No information available.</div>
-                </div>
-                <div class="col s5 right-align">
-                  <a id="closeButton" class="light-blue waves-effect waves-light btn">Close Tab</a>
+								<table id="debug-request-table" class="hover centered" style="font-size: 14px">
+									<thead>
+										<tr>
+											<th class="no-sort"></th>
+											<th>Time(GMT)</th>
+											<th>DebugType</th>
+											<th>Credential</th>
+											<th>ErrorCode or Hostname, IP</th>
+											<th>Status</th>
+											<th class="no-sort"></th>
+										</tr>
+                  </thead>
+                  <tbody id="debugreqlist">
+                  </tbody>
+                </table>
+              </div>
+
+              <div class="row right-align">
+                <div class="col s12 right-align">
+                  <a id="clearDebugRecordButton" class="btn blue-grey waves-effect waves-light">Clear All</a>
+                  <a id="closeButton" class="btn light-blue waves-effect waves-light">Close Tab</a>
                 </div>
               </div>
+
             </div>
           </div>
         </div>
-    </div>
-
+      </div>
     </div> <!-- container -->
 
     <script type="text/javascript" src="/js/jquery-3.1.1.min.js"></script>
     <script type="text/javascript" src="/js/materialize.min.js"></script>
+    <script type="text/javascript" src="/js/jquery.dataTables.js"></script>
     <script type="text/javascript" src="/js/common.js"></script>
     <script type="text/javascript" src="/debugreq/debugreq-history.js"></script>
+    <script type="text/javascript" src="/debugreq/debugreq-details.js"></script>
   </body>
 </html>
-
-
