--- a/popup.html
+++ b/popup.html
@@ -244,8 +244,8 @@
                           <option value="" disabled selected>Method</option>
                           <option value="GET">GET</option>
                           <option value="POST">POST</option>
-                          <option value="PUT">PUT</option>
-                          <option value="DELETE">DELETE</option>
+                          <!--<option value="PUT">PUT</option>
+                          <option value="DELETE">DELETE</option>-->
                         </select>
                   </div>  
                 </div>
