completed - OPEN API tester phase 1
* added support to make POST, GET and DELETE requests within OPEN API
Tester
* added support to store the results

--- a/openapitester/openapitester-history.html
+++ b/openapitester/openapitester-history.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Purge History</title>
+    <title>Open API History</title>
     <link type="text/css" rel="stylesheet" href="/css/materialize.css" media="screen,projection"/>
     <link type="text/css" rel="stylesheet" href="/css/common.css" media="screen,projection"/>
     <link rel="stylesheet" href="/fonts/materialicons.css"  type="text/css">
@@ -26,7 +26,7 @@
             <div class="card-content">
 
               <div class="row">
-                <span class="card-title">Purge History</span>
+                <span class="card-title">OPEN API History</span>
               </div>
 
               <div class="row" id="historytab">
