completed - openapitester-history page

--- a/openapitester/openapitester-history.html
+++ b/openapitester/openapitester-history.html
@@ -30,18 +30,15 @@
               </div>
 
               <div class="row" id="historytab">
-								<table id="purge-table" class="hover centered" style="font-size: 14px">
+								<table id="openapi-table" class="hover centered" style="font-size: 14px">
 									<thead>
 										<tr>
 											<th class="no-sort"></th>
 											<th>Time(GMT)</th>
-											<th>Credential</th>
-											<th>UpdateType</th>
-											<th>PurgeType</th>
-											<th>PurgeId</th>
-											<th>ObjectNum</th>
-											<th>Network</th>
-											<th>Status</th>
+											<th>OPEN API Cred</th>
+											<th>HTTP Method</th>
+											<th>API Endpoint Requested</th>
+											<th>Response Status</th>
 											<th class="no-sort"></th>
 										</tr>
                   </thead>
@@ -67,7 +64,7 @@
     <script type="text/javascript" src="/js/materialize.min.js"></script>
     <script type="text/javascript" src="/js/jquery.dataTables.js"></script>
     <script type="text/javascript" src="/js/common.js"></script>
-    <script type="text/javascript" src="/fastpurge/fastpurge-details.js"></script>
-    <script type="text/javascript" src="/fastpurge/fastpurge-history.js"></script>
+    <script type="text/javascript" src="/openapitester/openapitester-details.js"></script>
+    <script type="text/javascript" src="/openapitester/openapitester-history.js"></script>
   </body>
 </html>
