--- a/cmanager/credential.html
+++ b/cmanager/credential.html
@@ -13,31 +13,31 @@
               <span class="card-title">Adding an API Credential</span>
               <div class="row">
                 <div class="input-field col s12">
-                  <input placeholder="API credential for Account Akamai" id="credential_desc" type="text">
+                  <input placeholder="" id="credential_desc" type="text">
                   <label for="credential_desc">Credential Description</label>
                 </div>
               </div>
               <div class="row">
                 <div class="input-field col s12">
-                  <input placeholder="https://akab-xxxxx.yyyy.akamaiapis.net" id="baseurl" type="text">
+                  <input placeholder="" id="baseurl" type="text">
                   <label for="baseurl">Base URL (ensure you start the BaseURL with https://)</label>
                 </div>
               </div>
               <div class="row">
                 <div class="input-field col s12">
-                  <input placeholder="akab-tk5pfdsafdasfdasd-kuzhzd22ux4bqxwm" id="accesstoken" type="text">
+                  <input placeholder="" id="accesstoken" type="text">
                   <label for="accesstoken">Access Token</label>
                 </div>
               </div>
               <div class="row">
                 <div class="input-field col s12">
-                  <input placeholder="akab-3wemri3ntswszf72-vptl5ufdafdsfdasc" id="clienttoken" type="text">
+                  <input placeholder="" id="clienttoken" type="text">
                   <label for="clienttoken">Client Token</label>
                 </div>
               </div>
               <div class="row">
                 <div class="input-field col s12">
-                  <input placeholder="ahlaglC90Ai0Vf8Flfdasfdafdasfdasfdasfdas9s=" id="secret" type="text">
+                  <input placeholder="" id="secret" type="text">
                   <label for="secret">Secret</label>
                 </div>
               </div>
@@ -55,6 +55,7 @@
             <div class="card-action">
               <div class="row right-align">
                 <div class="col s12">
+                  <a id="closed_api_Button" class="blue-grey waves-effect waves-light btn">Close</a>
                   <a id="submitButton-add" class="light-blue waves-effect waves-light btn">Save &amp; Add Another</a>
                   <a id="submitButton" class="light-blue waves-effect waves-light btn">Save &amp; Close</a>
                   <a id="clearButton" class="blue-grey waves-effect waves-light btn">Reset</a>
